<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pullItemContainer"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvPullUserImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/userimage_label"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBody" />

            <ImageView
                android:id="@+id/ivPullUserImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPullUserImageLabel" />

            <TextView
                android:id="@+id/tvPullUserNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/usernamelabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/tvPullUserImageLabel"
                app:layout_constraintTop_toBottomOf="@id/tvBody" />

            <TextView
                android:id="@+id/tvPullUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvPullData"
                app:layout_constraintStart_toEndOf="@id/tvPullUserImageLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPullUserNameLabel"
                tools:text="USERNAME" />

            <TextView
                android:id="@+id/tvPullTitleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvpulltitlelabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPullTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPullTitleLabel"
                tools:text="TITLE" />

            <TextView
                android:id="@+id/tvBodyLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="10"
                android:text="@string/tvbodylabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPullTitle" />

            <TextView
                android:id="@+id/tvBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="10"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBodyLabel"
                tools:text="BODY" />

            <TextView
                android:id="@+id/tvPullDataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pulldatalabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@+id/tvPullData"
                app:layout_constraintTop_toBottomOf="@id/tvBody" />

            <TextView
                android:id="@+id/tvPullData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPullDataLabel"
                tools:text="PULLDATA" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>