<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvUserImageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userimage_label"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ivUserImage"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivUserImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserImageLabel" />

            <TextView
                android:id="@+id/tvUserNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/username_label"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/ivUserImage"
                app:layout_constraintTop_toBottomOf="@id/ivUserImage" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ivUserImage"
                app:layout_constraintStart_toStartOf="@id/ivUserImage"
                app:layout_constraintTop_toBottomOf="@id/tvUserNameLabel"
                tools:text="USERNAME" />

            <TextView
                android:id="@+id/tvTitleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/tvtitlelabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/ivUserImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel"
                tools:text="TITLE" />

            <TextView
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvdescriptionlabel"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="10"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/ivUserImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel"
                tools:text="DESCRIPTION" />

            <TextView
                android:id="@+id/tvStarsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tvstarslabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/tvForksLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/golden"
                app:layout_constraintStart_toEndOf="@+id/ivStar"
                app:layout_constraintTop_toBottomOf="@+id/tvStarsLabel"
                tools:text="STARS" />

            <TextView
                android:id="@+id/tvForksLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvforkslabel"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvForks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/golden"
                app:layout_constraintStart_toEndOf="@+id/ivFork"
                app:layout_constraintTop_toBottomOf="@+id/tvForksLabel"
                tools:text="FORKS" />

            <ImageView
                android:id="@+id/ivFork"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForksLabel"
                app:srcCompat="@drawable/fork_icon_golden_final" />

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/tvStarsLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvStarsLabel"
                app:srcCompat="@drawable/star_golden_final" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>